fix: Conserta a configuração de CORS.